# mpdfm

./: .clang-format  .clang-tidy  .gitmodules  README  example.cfg  meson.build
docs/: Doxyfile
include/: directory_helper.hpp  http_client.hpp  mpc.hpp  scrobbler.hpp  uris.hpp
include/config/: config_file.hpp
include/protocols/: as20.hpp  protocols_doc.hpp
src/: directory_helper.cpp  http_client.cpp  main.cpp  mpc.cpp  scrobbler.cpp  uris.cpp
src/config/: config_file.cpp
src/protocols/: as20.cpp
subprojects/: .gitignore
